# jsk_diabolo_pr2

./: CMakeLists.txt  README.md  how-to-launch-demo.md  package.xml  po  todo.txt
apps/: app.installed
apps/diabolo/: diabolo.xml
euslisp/: #juggle.l#  *shell*  .#*shell*  .#juggle.l  demo-idle-simulate.l  demo-idle.l  diabolo-model.l  idle.l  juggle.l  tmp.l  toss.l  utils.l
launch/: demo_idle_diabolo.launch  demo_toss_diabolo.launch  diabolo.launch  idle_diabolo.launch  idle_diabolo_simulate.launch  toss_diabolo.launch
meshes/: diabolo.dae  diabolo.urdf  nil_link_mesh.dae
scripts/: .#diabolo_system.py  calc_gmm.py  diabolo-system.py  diabolo_system.py  double_dqn.py  fitting_plot.sh  gmm.py  logger.py  lpf.py  particle_system.py  pitch-yaw-plotter.py  pitch-yaw-realtime-plotter.py  plot-fitting.sh  plot-simulate-state.sh  plot_fitting_state.sh  plot_lpf.py  plotter.py  po  po.py  start_idle_launch.sh  start_launch.sh  start_toss_launch.sh  state-input-logger.py  state_realtime_plotter.py  system-identification-continuity.py  system-identification-discrete.py  system-identification.py  system-regression.py  test_chainer.py
scripts/obsolete/: calc_gmm.py  keras_diabolo_system.py  plot-fitting.sh  system-identification-continuity.py  system-identification-discrete.py
scripts_node/: diabolo_system.py
scripts_plot/: plot_lpf.py  plot_state_input.py  plot_state_input_robust.py
src/: .#particle_system.cpp  calc_diabolo_state.cpp  calc_idle_diabolo_state.cpp  calc_toss_diabolo_pos.cpp  diabolo_marker.cpp  idle_diabolo_marker.cpp  particle_system.cpp  publish_diabolo_model.cpp  sample_pcl.cpp  toss_diabolo_marker.cpp
